--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,13 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
+| <a href="./">home</a>
+| <a href="#top">top</a>
+|  <a href="https://github.com/larzeitlin">github</a>
+| 👻
+</header>
 </head>
 <body>
 <div id="content" class="content">
@@ -200,38 +206,117 @@
 hi i'm luke - this is my blog
 </p>
 
-<ul class="org-ul">
-<li><a href="./convolution.html">convolution</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2017-07-23 Sun]</span></span></li>
-<li><a href="dft.html">discrete fourier transform</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2017-07-23 Sun]</span></span></li>
-<li><a href="ring-modulation.html">ring modulation and frequency shifting</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2017-11-08 Wed]</span></span></li>
-<li><a href="assembly.html">x86-64 assembly</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2019-05-12 Sun]</span></span></li>
-<li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2020-10-22 Thu]</span></span></li>
-<li><a href="aes-encryption.html">aes encryption</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2020-12-30 Wed]</span></span></li>
-<li><a href="how-this-blog-works.html">how this blog works</a> 
-<span class="timestamp-wrapper"><span class="timestamp">[2023-02-06 Mon]</span></span></li>
-<li><a href="scittle-hilbert-curve.html">scittle hilbert curve</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2023-02-22 Wed]</span></span></li>
-<li><a href="i-ching.html">i ching</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2023-05-25 Thu]</span></span></li>
-<li><a href="http://www.lzeitlin.xyz/octohabit/">habit tracker</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2023-08-02 Wed]</span></span></li>
-<li><a href="http://www.lzeitlin.xyz/laranjas/">particle system</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2023-11-19 Sun]</span></span></li>
-<li><a href="cljs-webgl1.html">webgl in cljs part 1</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2023-11-21 Tue]</span></span></li>
-<li><a href="wfc.html">wave function collapse</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2024-01-15 Mon]</span></span></li>
-<li><a href="http://www.lzeitlin.xyz/vortex-doodle/">scittle and three.js</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2024-02-04 Sun]</span></span></li>
-<li><a href="cljs-openlayers.html">cljs / openlayers / pwa</a>
-<span class="timestamp-wrapper"><span class="timestamp">[2024-07-21 Sun]</span></span></li>
-</ul>
+
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides" align="center">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">post</th>
+<th scope="col" class="org-left">tags</th>
+<th scope="col" class="org-left">date</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left"><a href="./convolution.html">convolution</a></td>
+<td class="org-left">dsp, maths</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2017-07-23 Sun]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="dft.html">discrete fourier transform</a></td>
+<td class="org-left">dsp, maths</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2017-07-23 Sun]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="ring-modulation.html">ring modulation and frequency shifting</a></td>
+<td class="org-left">dsp, maths</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2017-11-08 Wed]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="assembly.html">x86-64 assembly</a></td>
+<td class="org-left">programming</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2019-05-12 Sun]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a></td>
+<td class="org-left">clojure, demo</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2020-10-22 Thu]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="aes-encryption.html">aes encryption</a></td>
+<td class="org-left">clojure, cryptography</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2020-12-30 Wed]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="how-this-blog-works.html">how this blog works</a></td>
+<td class="org-left">emacs</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2023-02-06 Mon]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="scittle-hilbert-curve.html">scittle hilbert curve</a></td>
+<td class="org-left">clojure, computer science, scittle, interactive</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2023-02-22 Wed]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="i-ching.html">i ching</a></td>
+<td class="org-left">clojure, scittle, interactive</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2023-05-25 Thu]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="http://www.lzeitlin.xyz/octohabit/">habit tracker</a></td>
+<td class="org-left">clojure, scittle, demo</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2023-08-02 Wed]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="http://www.lzeitlin.xyz/laranjas/">particle system</a></td>
+<td class="org-left">clojure, demo</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2023-11-19 Sun]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="cljs-webgl1.html">webgl in cljs part 1</a></td>
+<td class="org-left">clojure, graphics</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2023-11-21 Tue]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="wfc.html">wave function collapse</a></td>
+<td class="org-left">clojure, computer sciene, interactive</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2024-01-15 Mon]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="http://www.lzeitlin.xyz/vortex-doodle/">scittle and three.js</a></td>
+<td class="org-left">clojure, scittle, demo, graphics</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2024-02-04 Sun]</span></span></td>
+</tr>
+
+<tr>
+<td class="org-left"><a href="cljs-openlayers.html">cljs / openlayers / pwa</a></td>
+<td class="org-left">clojure, gis</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2024-07-21 Sun]</span></span></td>
+</tr>
+</tbody>
+</table>
+
 
 <p>
 <a href="mailto:luke@lzeitlin.xyz">send me an email</a>
