--- a/public/404.html
+++ b/public/404.html
@@ -191,15 +191,21 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
+| <a href="./">home</a>
+| <a href="#top">top</a>
+|  <a href="https://github.com/larzeitlin">github</a>
+| 👻
+</header>
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-orgfc1e9e1" class="outline-2">
-<h2 id="orgfc1e9e1">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgfc1e9e1">
+<div id="outline-container-orgbc9e137" class="outline-2">
+<h2 id="orgbc9e137">404 - page not found</h2>
+<div class="outline-text-2" id="text-orgbc9e137">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
