--- a/public/convolution.html
+++ b/public/convolution.html
@@ -191,7 +191,13 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
+| <a href="./">home</a>
+| <a href="#top">top</a>
+|  <a href="https://github.com/larzeitlin">github</a>
+| 👻
+</header>
 </head>
 <body>
 <div id="content" class="content">
@@ -200,12 +206,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7f2c792">Convolution</a>
+<li><a href="#orgf59af11">Convolution</a>
 <ul>
-<li><a href="#org1d2850e">What can convolution do for us?</a></li>
-<li><a href="#org29288b3">Do LTI systems exist?</a></li>
-<li><a href="#org060d4a3">OK, lets convolve!</a></li>
-<li><a href="#orgce2c02e">Why do we do the flip?</a></li>
+<li><a href="#orgbc178b3">What can convolution do for us?</a></li>
+<li><a href="#org54ee51a">Do LTI systems exist?</a></li>
+<li><a href="#org54c396e">OK, lets convolve!</a></li>
+<li><a href="#orgeaa5136">Why do we do the flip?</a></li>
 <li><a href="#impulse-responses">Impulse Responses</a></li>
 </ul>
 </li>
@@ -213,9 +219,9 @@
 </div>
 </div>
 
-<div id="outline-container-org7f2c792" class="outline-2">
-<h2 id="org7f2c792">Convolution</h2>
-<div class="outline-text-2" id="text-org7f2c792">
+<div id="outline-container-orgf59af11" class="outline-2">
+<h2 id="orgf59af11">Convolution</h2>
+<div class="outline-text-2" id="text-orgf59af11">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -243,9 +249,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org1d2850e" class="outline-3">
-<h3 id="org1d2850e">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org1d2850e">
+<div id="outline-container-orgbc178b3" class="outline-3">
+<h3 id="orgbc178b3">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-orgbc178b3">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -289,13 +295,13 @@ Again, this is shown by A producing the same result as B.
 </p>
 
 
-<div id="org98eed93" class="figure">
+<div id="orga588e17" class="figure">
 <p><img src="images/linear1.jpg" alt="linear1.jpg" />
 </p>
 </div>
 
 
-<div id="org91ea7a7" class="figure">
+<div id="orga73215e" class="figure">
 <p><img src="images/3.1.png" alt="3.1.png" />
 </p>
 </div>
@@ -347,9 +353,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org29288b3" class="outline-3">
-<h3 id="org29288b3">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org29288b3">
+<div id="outline-container-org54ee51a" class="outline-3">
+<h3 id="org54ee51a">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org54ee51a">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -373,9 +379,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org060d4a3" class="outline-3">
-<h3 id="org060d4a3">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org060d4a3">
+<div id="outline-container-org54c396e" class="outline-3">
+<h3 id="org54c396e">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org54c396e">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -390,7 +396,7 @@ The definition of discrete-time convolution is as follows:
 </p>
 
 
-<div id="org4b1676c" class="figure">
+<div id="orgb05de12" class="figure">
 <p><img src="images/3.2.jpeg" alt="3.2.jpeg" />
 </p>
 </div>
@@ -462,7 +468,7 @@ flipped around 0 on the y axis)</li>
 </ul>
 
 
-<div id="org6405f2f" class="figure">
+<div id="org66392ae" class="figure">
 <p><img src="images/3.3.gif" alt="3.3.gif" />
 </p>
 </div>
@@ -516,9 +522,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-orgce2c02e" class="outline-3">
-<h3 id="orgce2c02e">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-orgce2c02e">
+<div id="outline-container-orgeaa5136" class="outline-3">
+<h3 id="orgeaa5136">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-orgeaa5136">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -552,7 +558,7 @@ points apart from one point where it's value is 1. For example: [0, 1, 0,
 </p>
 
 
-<div id="org33b9ce2" class="figure">
+<div id="org720b610" class="figure">
 <p><img src="images/3.4.jpeg" alt="3.4.jpeg" />
 </p>
 </div>
