--- a/public/ring-modulation.html
+++ b/public/ring-modulation.html
@@ -191,28 +191,45 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel ="stylesheet" type= "text/css" href="./styles.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header><a href="./">home</a> <a href="#top">top</a> </header>
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        displayAlign: "center",
-        displayIndent: "0em",
-
-        "HTML-CSS": { scale: 100,
-                        linebreaks: { automatic: "false" },
-                        webFont: "TeX"
-                       },
-        SVG: {scale: 100,
-              linebreaks: { automatic: "false" },
-              font: "TeX"},
-        NativeMML: {scale: 100},
-        TeX: { equationNumbers: {autoNumber: "AMS"},
-               MultLineWidth: "85%",
-               TagSide: "right",
-               TagIndent: ".8em"
-             }
-});
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
+| <a href="./">home</a>
+| <a href="#top">top</a>
+|  <a href="https://github.com/larzeitlin">github</a>
+| 👻
+</header>
+<script>
+  window.MathJax = {
+    tex: {
+      ams: {
+        multlineWidth: '85%'
+      },
+      tags: 'ams',
+      tagSide: 'right',
+      tagIndent: '.8em'
+    },
+    chtml: {
+      scale: 1.0,
+      displayAlign: 'center',
+      displayIndent: '0em'
+    },
+    svg: {
+      scale: 1.0,
+      displayAlign: 'center',
+      displayIndent: '0em'
+    },
+    output: {
+      font: 'mathjax-modern',
+      displayOverflow: 'overflow'
+    }
+  };
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"></script>
+
+<script
+  id="MathJax-script"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
 </head>
 <body>
 <div id="content" class="content">
@@ -221,32 +238,32 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org643e688">Ring Modulation and Frequency Shifting</a>
+<li><a href="#orgedde9a2">Ring Modulation and Frequency Shifting</a>
 <ul>
-<li><a href="#orgd5911cb">Rethinking basic operations</a>
+<li><a href="#org5d47646">Rethinking basic operations</a>
 <ul>
-<li><a href="#org7df4b10">Addition and Subtraction</a></li>
-<li><a href="#orgfc88a3a">Multiplication shows similarity</a></li>
+<li><a href="#org9b355cc">Addition and Subtraction</a></li>
+<li><a href="#org8d0ff66">Multiplication shows similarity</a></li>
 </ul>
 </li>
-<li><a href="#orge05d433">Adding and Multiplying signals</a></li>
-<li><a href="#org11b7ee1">Let's get Triggy with it&#x2026;</a></li>
-<li><a href="#org24ea669">SSB Modulation</a></li>
-<li><a href="#orge416a0d">Hilbert Transform</a>
+<li><a href="#org94f7b74">Adding and Multiplying signals</a></li>
+<li><a href="#orgecf4af4">Let's get Triggy with it&#x2026;</a></li>
+<li><a href="#org261d5cd">SSB Modulation</a></li>
+<li><a href="#orgaefe1fa">Hilbert Transform</a>
 <ul>
-<li><a href="#org0252a93">Phase shifting with All-Pass Filters</a></li>
+<li><a href="#org9dfcdd9">Phase shifting with All-Pass Filters</a></li>
 </ul>
 </li>
-<li><a href="#org559368b">Aliasing</a></li>
-<li><a href="#org03c5f37">Gotchas and stuff</a></li>
+<li><a href="#orgd35c0c4">Aliasing</a></li>
+<li><a href="#org8833910">Gotchas and stuff</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org643e688" class="outline-2">
-<h2 id="org643e688">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org643e688">
+<div id="outline-container-orgedde9a2" class="outline-2">
+<h2 id="orgedde9a2">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orgedde9a2">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -280,9 +297,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgd5911cb" class="outline-3">
-<h3 id="orgd5911cb">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgd5911cb">
+<div id="outline-container-org5d47646" class="outline-3">
+<h3 id="org5d47646">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org5d47646">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -302,9 +319,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org7df4b10" class="outline-4">
-<h4 id="org7df4b10">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org7df4b10">
+<div id="outline-container-org9b355cc" class="outline-4">
+<h4 id="org9b355cc">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org9b355cc">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -317,9 +334,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orgfc88a3a" class="outline-4">
-<h4 id="orgfc88a3a">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orgfc88a3a">
+<div id="outline-container-org8d0ff66" class="outline-4">
+<h4 id="org8d0ff66">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org8d0ff66">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -351,9 +368,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orge05d433" class="outline-3">
-<h3 id="orge05d433">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orge05d433">
+<div id="outline-container-org94f7b74" class="outline-3">
+<h3 id="org94f7b74">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org94f7b74">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -404,7 +421,7 @@ added together:
 </p>
 
 
-<div id="orgf32efe3" class="figure">
+<div id="orgcb07b8d" class="figure">
 <p><img src="images/5.1.gif" alt="5.1.gif" />
 </p>
 </div>
@@ -426,7 +443,7 @@ everything up above the horizontal axis, like so:
 </p>
 
 
-<div id="org5d9b300" class="figure">
+<div id="orgd16b0fe" class="figure">
 <p><img src="images/5.2.gif" alt="5.2.gif" />
 </p>
 </div>
@@ -445,7 +462,7 @@ Let's have a look:
 </p>
 
 
-<div id="org170952c" class="figure">
+<div id="org781c004" class="figure">
 <p><img src="images/5.3.gif" alt="5.3.gif" />
 </p>
 </div>
@@ -468,7 +485,7 @@ the sum and the difference of the signals above&#x2026;
 </p>
 
 
-<div id="org7637a8a" class="figure">
+<div id="org8071b1e" class="figure">
 <p><img src="images/5.4.gif" alt="5.4.gif" />
 </p>
 </div>
@@ -484,7 +501,7 @@ if we scale it down by a half they look very similar indeed:
 </p>
 
 
-<div id="orge0903d8" class="figure">
+<div id="orgacd48d2" class="figure">
 <p><img src="images/5.5.gif" alt="5.5.gif" />
 </p>
 </div>
@@ -508,9 +525,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org11b7ee1" class="outline-3">
-<h3 id="org11b7ee1">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org11b7ee1">
+<div id="outline-container-orgecf4af4" class="outline-3">
+<h3 id="orgecf4af4">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgecf4af4">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -586,9 +603,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org24ea669" class="outline-3">
-<h3 id="org24ea669">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org24ea669">
+<div id="outline-container-org261d5cd" class="outline-3">
+<h3 id="org261d5cd">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org261d5cd">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -608,7 +625,7 @@ want to isolate the upper sideband.
 </p>
 
 
-<div id="orgc99072f" class="figure">
+<div id="org2bd4e6f" class="figure">
 <p><img src="images/5.6.png" alt="5.6.png" />
 </p>
 </div>
@@ -635,7 +652,7 @@ multiplied by the carrier but in phase quadrature, so \[\sin(\omega)\].
 </p>
 
 
-<div id="org91227fa" class="figure">
+<div id="org77b27e4" class="figure">
 <p><img src="images/5.7.png" alt="5.7.png" />
 </p>
 </div>
@@ -653,9 +670,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orge416a0d" class="outline-3">
-<h3 id="orge416a0d">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orge416a0d">
+<div id="outline-container-orgaefe1fa" class="outline-3">
+<h3 id="orgaefe1fa">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-orgaefe1fa">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -669,9 +686,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org0252a93" class="outline-4">
-<h4 id="org0252a93">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org0252a93">
+<div id="outline-container-org9dfcdd9" class="outline-4">
+<h4 id="org9dfcdd9">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org9dfcdd9">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -687,7 +704,7 @@ for a large part of the spectrum.
 </p>
 
 
-<div id="orgb800d05" class="figure">
+<div id="orgf016e46" class="figure">
 <p><img src="images/5.8.png" alt="5.8.png" />
 </p>
 </div>
@@ -714,9 +731,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org559368b" class="outline-3">
-<h3 id="org559368b">Aliasing</h3>
-<div class="outline-text-3" id="text-org559368b">
+<div id="outline-container-orgd35c0c4" class="outline-3">
+<h3 id="orgd35c0c4">Aliasing</h3>
+<div class="outline-text-3" id="text-orgd35c0c4">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -732,9 +749,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org03c5f37" class="outline-3">
-<h3 id="org03c5f37">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org03c5f37">
+<div id="outline-container-org8833910" class="outline-3">
+<h3 id="org8833910">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org8833910">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
